[gd_scene load_steps=9 format=3 uid="uid://dn2pbvh8nkfeo"]

[ext_resource type="Script" uid="uid://bmwqf41mnett8" path="res://personagens/inimigos/inimigo_base.gd" id="1_uejkv"]
[ext_resource type="Script" uid="uid://poeui62rhe38" path="res://personagens/health_component.gd" id="2_spr2x"]
[ext_resource type="PackedScene" uid="uid://bklkio2ubbtxr" path="res://personagens/dano_flutuante.tscn" id="3_lt0re"]
[ext_resource type="Texture2D" uid="uid://b6elp3vtu8n2p" path="res://HUD/alert.png" id="4_brd8b"]
[ext_resource type="AudioStream" uid="uid://bud6wxjfvc3o0" path="res://assets/personagens/inimigos/audios/alerte.mp3" id="5_ego8o"]
[ext_resource type="AudioStream" uid="uid://dohdlx2nyklia" path="res://personagens/armas/brun.MP3" id="6_ego8o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lt0re"]
radius = 120.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kjg7o"]
radius = 12.0

[node name="InimigoBase" type="CharacterBody2D" groups=["damageable_enemy"]]
script = ExtResource("1_uejkv")

[node name="Textura" type="Sprite2D" parent="."]

[node name="Animacao" type="AnimationPlayer" parent="."]

[node name="Colisao" type="CollisionShape2D" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_spr2x")
cena_dano_flutuante = ExtResource("3_lt0re")
metadata/_custom_type_script = "uid://poeui62rhe38"

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]

[node name="AudioMorrer" type="AudioStreamPlayer2D" parent="."]

[node name="AudioAtaque" type="AudioStreamPlayer2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-10, -20, 20, 40)

[node name="ZonaDeDeteccao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaDeDeteccao"]
shape = SubResource("CircleShape2D_lt0re")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBoxAtaque" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxAtaque"]
shape = SubResource("CircleShape2D_kjg7o")
disabled = true

[node name="SinalAlerta" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_brd8b")

[node name="AudioAlerta" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ego8o")
volume_db = -11.856

[node name="AlertaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DoTTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioQueimadura" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ego8o")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="ZonaDeDeteccao" to="." method="_on_zona_de_deteccao_body_entered"]
[connection signal="body_exited" from="ZonaDeDeteccao" to="." method="_on_zona_de_deteccao_body_exited"]
[connection signal="body_entered" from="HitBoxAtaque" to="." method="_on_hit_box_ataque_body_entered"]
